Display action added. Need to fix cord normalization.

--- a/FlightTracker/Views/Shared/_Layout.cshtml
+++ b/FlightTracker/Views/Shared/_Layout.cshtml
@@ -6,9 +6,8 @@
     <title>Plane Tracker</title>
 </head>
 <body>
-    <div class="container body-content">
+    <div>
         @RenderBody()
-        <hr />
     </div>
 
     @Scripts.Render("~/bundles/jquery")
