display works! fuck yeah!

--- a/FlightTracker/Views/Home/Display.cshtml
+++ b/FlightTracker/Views/Home/Display.cshtml
@@ -137,38 +137,37 @@
 </script>
 
 <script>
-    var data = @ViewBag.data;
-    if (data == null)
-    {
-        return;
-    }
-
     var IntervalTime = @Session["time"] * 1000;
-    
-    var l = @(ViewBag.data);
-    var content;
+
     var fileContent = Array();
 
-    //convert the c# list of lon and lat to a javascript array
-    for (content in l)
+    @if (ViewBag.data == null)
     {
-        fileContent.push(content);
+        <text> alert("No data was given"); 
+        throw new Error("No data was given"); </text>
+    }
+
+    @for(int i = 0; i < ViewBag.data.Count; i++){
+      <text> fileContent[@i] = "@ViewBag.data[@i]"; </text>
     }
 
     var lastX = null;
     var lastY = null;
-    var longtitude = null;
-    var latitude = null;
 
     //Draws a line from one point to another using the lon and lat values
-    drawLineFromFile = (function () {
+    drawLineFromFile = (function (longtitude, latitude) {
         var map = document.getElementById("map");
         var context = map.getContext("2d");
+
+        longtitude = parseFloat(longtitude);
+        latitude = parseFloat(latitude);
         
         var normLon = ((longtitude + 180.0) * (window.innerWidth / 360.0));
-        
+        console.log(normLon);
+        console.log(window.innerWidth);
         var normLat = ((latitude + 90.0) * (window.innerHeight / 180.0));
-
+        console.log(normLat);
+        console.log(window.innerHeight);
         if (lastX == null || lastY == null) {
             drawArcOnCanvas(normLon, normLat, 5, "#f00000");
         } else {
@@ -190,34 +189,43 @@
         }
         lastX = normLon;
         lastY = normLat;
+
+        $("#lng").text(longtitude);
+        $("#lat").text(latitude);
     });
 
-    drawPointFromFile = (function () {
+    drawPointFromFile = (function (longtitude, latitude) {
         var map = document.getElementById("map");
+
+        longtitude = parseFloat(longtitude);
+        latitude = parseFloat(latitude);
 
         var normLon = ((longtitude + 170.0) * (map.width / 360.0));
 
         var normLat = ((latitude + 50.0) * (map.height / 180.0));
 
-        console.log("lng: " + fLon + " -> " + (Math.round(normLon)).toString());
-        console.log("lat: " + fLat + " -> " + (Math.round(normLat)).toString());
+        console.log("lng: " + longtitude + " -> " + (Math.round(normLon)).toString());
+        console.log("lat: " + latitude + " -> " + (Math.round(normLat)).toString());
 
         drawArcOnCanvas(normLon, normLat, 10, "#09298f");
         drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+
+        $("#lng").text(longtitude);
+        $("#lat").text(latitude);
     });
 
     //iterate on the array and draw
     var i = 0;
     var interval = null;
     drawAll = (function () {
-        longtitude = fileContent[i * 5];
-        latitude = fileContent[i * 5 + 1];
-        
+        var longtitude = fileContent[i * 5];
+        var latitude = fileContent[i * 5 + 1];
+
         if (i == fileContent.length / 5) {
             clearInterval(interval);
-            drawPointFromFile();
+            drawPointFromFile(longtitude, latitude);
         } else {
-            drawLineFromFile();
+            drawLineFromFile(longtitude, latitude);
             i++;
         }
     });
