--- a/FlightTracker/Views/Home/Save.cshtml
+++ b/FlightTracker/Views/Home/Save.cshtml
@@ -1,6 +1,8 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    ViewBag.Title = "Save";
 }
+
 <style>
     html, body {
         overflow: hidden;
@@ -47,6 +49,8 @@
 <script>
     var IntervalTime = @Session["time"] * 1000;
     var connected = @Session["connected"];
+    var period = @Session["period"];
+    var filename = "@Session["filename"]";
 
     if (connected == 0) {
         alert("Not Connected to simulator!");
@@ -55,6 +59,7 @@
 
     var lastX = null;
     var lastY = null;
+    var timer = 0;
 
     drawLine = (function () {
         $.post( "@Url.Action("GetCord")").done(function (xml) {
@@ -95,13 +100,25 @@
             lastX = normLon;
             lastY = normLat;
 
+            //All values should be saved to the file
+            var throttle = $xml.find("throttle");
+            var rudder = $xml.find("rudder");
+
+            $.post("@Url.Action("WriteToFile")/" + filename + "/" + lon + "/" + lat + "/" + throttle + "/" + rudder);
+
             $("#lng").text(lng);
             $("#lat").text(lat);
         });
     });
+    var startTime = new Date();
     if (IntervalTime != 0) {
-        setInterval(drawLine, IntervalTime);
-        drawLine();
+        var current = new Date();
+        var waitingTime = period * 1000;
+        while ((current - startTime) < waitingTime) {
+            setInterval(drawLine, IntervalTime);
+            drawLine();
+            current = new Date();
+        }
     } else {
         drawPoint = (function () {
             $.post( "@Url.Action("GetCord")").done(function (xml) {
@@ -113,11 +130,9 @@
                 var map = document.getElementById("map");
 
                 var fLon = parseFloat(lng.valueOf());
-                //var aaa = ((aa + 180.0) / 360.0) * (c.scrollWidth);
                 var normLon = ((fLon + 170.0) * (map.width / 360.0));
 
                 var fLat = parseFloat(lat.valueOf());
-                //var bbb = ((bb + 90.0) / 180.0) * (c.scrollHeight);
                 var normLat = ((fLat + 50.0) * (map.height / 180.0)) ;
 
                 console.log("lng: " + fLon + " -> " + (Math.round(normLon)).toString());
@@ -125,6 +140,12 @@
 
                 drawArcOnCanvas(normLon, normLat, 10, "#09298f");
                 drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+
+                //All values should be saved to the file
+                var throttle = $xml.find("throttle");
+                var rudder = $xml.find("rudder");
+
+                $.post("@Url.Action("WriteToFile")/" + filename + "/" + lon + "/" + lat + "/" + throttle + "/" + rudder);
 
                 $("#lng").text(lng);
                 $("#lat").text(lat);
@@ -157,100 +178,4 @@
         context.arc((Math.round(x * 10) / 10), (Math.round(y * 10) / 10), r, 0, 2 * Math.PI);
         context.fill();
     });
-</script>
-
-@if (ViewBag.data == null || ViewBag == null)
-{
-    return;
-}
-
-<script>
-    var IntervalTime = @Session["time"] * 1000;
-    var fileContent = Array();
-
-    @for(int i = 0; i < ViewBag.data.Count; i++){
-      <text> fileContent[@i] = "@ViewBag.data[@i]"; </text>
-    }
-
-    var lastX = null;
-    var lastY = null;
-
-    //Draws a line from one point to another using the lon and lat values
-    drawLineFromFile = (function (longtitude, latitude) {
-        var map = document.getElementById("map");
-        var context = map.getContext("2d");
-
-        longtitude = parseFloat(longtitude);
-        latitude = parseFloat(latitude);
-
-        var normLon = ((longtitude + 180.0) * (window.innerWidth / 360.0));
-        console.log(normLon);
-        console.log(window.innerWidth);
-        var normLat = ((latitude + 90.0) * (window.innerHeight / 180.0));
-        console.log(normLat);
-        console.log(window.innerHeight);
-        if (lastX == null || lastY == null) {
-            drawArcOnCanvas(normLon, normLat, 5, "#f00000");
-        } else {
-            console.log("Drawing line from ("
-                + (Math.round(lastX * 10) / 10).toString()
-                + ","
-                + (Math.round(lastY * 10) / 10).toString()
-                + ") to ("
-                + (Math.round(normLon * 10) / 10).toString()
-                + ", "
-                + (Math.round(normLat * 10) / 10).toString()
-                + ")");
-            context.lineWidth = "10";
-            context.strokeStyle = "red";
-            context.beginPath();
-            context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
-            context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
-            context.stroke();
-        }
-        lastX = normLon;
-        lastY = normLat;
-
-        $("#lng").text(longtitude);
-        $("#lat").text(latitude);
-    });
-
-    drawPointFromFile = (function (longtitude, latitude) {
-        var map = document.getElementById("map");
-
-        longtitude = parseFloat(longtitude);
-        latitude = parseFloat(latitude);
-
-        var normLon = ((longtitude + 170.0) * (map.width / 360.0));
-
-        var normLat = ((latitude + 50.0) * (map.height / 180.0));
-
-        console.log("lng: " + longtitude + " -> " + (Math.round(normLon)).toString());
-        console.log("lat: " + latitude + " -> " + (Math.round(normLat)).toString());
-
-        drawArcOnCanvas(normLon, normLat, 10, "#09298f");
-        drawArcOnCanvas(normLon, normLat, 5, "#f00000");
-
-        $("#lng").text(longtitude);
-        $("#lat").text(latitude);
-    });
-
-    //iterate on the array and draw
-    var i = 0;
-    var interval = null;
-    drawAll = (function () {
-        var longtitude = fileContent[i * 5];
-        var latitude = fileContent[i * 5 + 1];
-
-        if (i == fileContent.length / 5) {
-            clearInterval(interval);
-            drawPointFromFile(longtitude, latitude);
-        } else {
-            drawLineFromFile(longtitude, latitude);
-            i++;
-        }
-    });
-
-    interval = setInterval(drawAll, IntervalTime);
-    alert("Animation is over");
 </script>
