--- a/FlightTracker/Views/Home/Display.cshtml
+++ b/FlightTracker/Views/Home/Display.cshtml
@@ -132,6 +132,100 @@
         });
         drawPoint();
     }
+
+    @if (ViewBag.data != null && ViewBag != null)
+    {
+        <text>
+        var fileContent = Array();
+
+        @for(int i = 0; i < ViewBag.data.Count; i++){
+          <text> fileContent[@i] = "@ViewBag.data[@i]"; </text>
+        }
+
+        var lastX = null;
+        var lastY = null;
+
+        //Draws a line from one point to another using the lon and lat values
+        drawLineFromFile = (function (longtitude, latitude) {
+            var map = document.getElementById("map");
+            var context = map.getContext("2d");
+
+            longtitude = parseFloat(longtitude);
+            latitude = parseFloat(latitude);
+
+            var normLon = ((longtitude + 180.0) * (window.innerWidth / 360.0));
+            console.log(normLon);
+            console.log(window.innerWidth);
+            var normLat = ((latitude + 90.0) * (window.innerHeight / 180.0));
+            console.log(normLat);
+            console.log(window.innerHeight);
+            if (lastX == null || lastY == null) {
+                drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+            } else {
+                console.log("Drawing line from ("
+                    + (Math.round(lastX * 10) / 10).toString()
+                    + ","
+                    + (Math.round(lastY * 10) / 10).toString()
+                    + ") to ("
+                    + (Math.round(normLon * 10) / 10).toString()
+                    + ", "
+                    + (Math.round(normLat * 10) / 10).toString()
+                    + ")");
+                context.lineWidth = "10";
+                context.strokeStyle = "red";
+                context.beginPath();
+                context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
+                context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
+                context.stroke();
+            }
+            lastX = normLon;
+            lastY = normLat;
+
+            $("#lng").text(longtitude);
+            $("#lat").text(latitude);
+        });
+
+        drawPointFromFile = (function (longtitude, latitude) {
+            var map = document.getElementById("map");
+
+            longtitude = parseFloat(longtitude);
+            latitude = parseFloat(latitude);
+
+            var normLon = ((longtitude + 170.0) * (map.width / 360.0));
+
+            var normLat = ((latitude + 50.0) * (map.height / 180.0));
+
+            console.log("lng: " + longtitude + " -> " + (Math.round(normLon)).toString());
+            console.log("lat: " + latitude + " -> " + (Math.round(normLat)).toString());
+
+            drawArcOnCanvas(normLon, normLat, 10, "#09298f");
+            drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+
+            $("#lng").text(longtitude);
+            $("#lat").text(latitude);
+        });
+
+        //iterate on the array and draw
+        var i = 0;
+        var interval = null;
+        drawAll = (function () {
+            var longtitude = fileContent[i * 5];
+            var latitude = fileContent[i * 5 + 1];
+
+            if (i == fileContent.length / 5) {
+                clearInterval(interval);
+                drawPointFromFile(longtitude, latitude);
+            } else {
+                drawLineFromFile(longtitude, latitude);
+                i++;
+            }
+        });
+
+        interval = setInterval(drawAll, IntervalTime);
+        alert("Animation is over");
+    </text>
+    }
+    
 </script>
 
 <script>
@@ -157,100 +251,4 @@
         context.arc((Math.round(x * 10) / 10), (Math.round(y * 10) / 10), r, 0, 2 * Math.PI);
         context.fill();
     });
-</script>
-
-@if (ViewBag.data == null || ViewBag == null)
-{
-    return;
-}
-
-<script>
-    var IntervalTime = @Session["time"] * 1000;
-    var fileContent = Array();
-
-    @for(int i = 0; i < ViewBag.data.Count; i++){
-      <text> fileContent[@i] = "@ViewBag.data[@i]"; </text>
-    }
-
-    var lastX = null;
-    var lastY = null;
-
-    //Draws a line from one point to another using the lon and lat values
-    drawLineFromFile = (function (longtitude, latitude) {
-        var map = document.getElementById("map");
-        var context = map.getContext("2d");
-
-        longtitude = parseFloat(longtitude);
-        latitude = parseFloat(latitude);
-
-        var normLon = ((longtitude + 180.0) * (window.innerWidth / 360.0));
-        console.log(normLon);
-        console.log(window.innerWidth);
-        var normLat = ((latitude + 90.0) * (window.innerHeight / 180.0));
-        console.log(normLat);
-        console.log(window.innerHeight);
-        if (lastX == null || lastY == null) {
-            drawArcOnCanvas(normLon, normLat, 5, "#f00000");
-        } else {
-            console.log("Drawing line from ("
-                + (Math.round(lastX * 10) / 10).toString()
-                + ","
-                + (Math.round(lastY * 10) / 10).toString()
-                + ") to ("
-                + (Math.round(normLon * 10) / 10).toString()
-                + ", "
-                + (Math.round(normLat * 10) / 10).toString()
-                + ")");
-            context.lineWidth = "10";
-            context.strokeStyle = "red";
-            context.beginPath();
-            context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
-            context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
-            context.stroke();
-        }
-        lastX = normLon;
-        lastY = normLat;
-
-        $("#lng").text(longtitude);
-        $("#lat").text(latitude);
-    });
-
-    drawPointFromFile = (function (longtitude, latitude) {
-        var map = document.getElementById("map");
-
-        longtitude = parseFloat(longtitude);
-        latitude = parseFloat(latitude);
-
-        var normLon = ((longtitude + 170.0) * (map.width / 360.0));
-
-        var normLat = ((latitude + 50.0) * (map.height / 180.0));
-
-        console.log("lng: " + longtitude + " -> " + (Math.round(normLon)).toString());
-        console.log("lat: " + latitude + " -> " + (Math.round(normLat)).toString());
-
-        drawArcOnCanvas(normLon, normLat, 10, "#09298f");
-        drawArcOnCanvas(normLon, normLat, 5, "#f00000");
-
-        $("#lng").text(longtitude);
-        $("#lat").text(latitude);
-    });
-
-    //iterate on the array and draw
-    var i = 0;
-    var interval = null;
-    drawAll = (function () {
-        var longtitude = fileContent[i * 5];
-        var latitude = fileContent[i * 5 + 1];
-
-        if (i == fileContent.length / 5) {
-            clearInterval(interval);
-            drawPointFromFile(longtitude, latitude);
-        } else {
-            drawLineFromFile(longtitude, latitude);
-            i++;
-        }
-    });
-
-    interval = setInterval(drawAll, IntervalTime);
-    alert("Animation is over");
 </script>
