--- a/FlightTracker/Views/Home/Display.cshtml
+++ b/FlightTracker/Views/Home/Display.cshtml
@@ -44,98 +44,134 @@
 </body>
 </html>
 
+
+
+<script>
+    window.onload = function () {
+        var map = document.getElementById("map");
+        map.width = window.innerWidth;
+        map.height = window.innerHeight;
+        var context = map.getContext("2d");
+        context.translate(0, 0);
+        var img = document.getElementById("map_pic");
+
+        context.drawImage(img, 0, 0, img.width, img.height, 0, 0, map.width, map.height);
+    };
+</script>
+
+<script>
+    drawArcOnCanvas = (function (x, y, r, color) {
+        var map = document.getElementById("map");
+        var context = map.getContext("2d");
+        console.log("Trying to draw on: " + x.toString() + "," + y.toString() + " of: " + map.clientWidth.toString() + "," + map.clientHeight.toString());
+        context.fillStyle = color;
+        context.beginPath();
+        context.arc((Math.round(x * 10) / 10), (Math.round(y * 10) / 10), r, 0, 2 * Math.PI);
+        context.fill();
+    });
+</script>
+
 <script>
     var IntervalTime = @Session["time"] * 1000;
     var connected = @Session["connected"];
-
-    if (connected == 0) {
-        alert("Not Connected to simulator!");
-        throw new Error("Not Connected to simulator!");
-    }
+    var fromFileContent = @Session["fileContent"];
 
     var lastX = null;
     var lastY = null;
 
-    drawLine = (function () {
-        $.post( "@Url.Action("GetCord")").done(function (xml) {
-            var xmlDoc = $.parseXML( xml ),
-            $xml = $( xmlDoc ),
-            lat = $xml.find("lat").text();
-            lng = $xml.find("lng").text();
-
-            var map = document.getElementById("map");
-            var context = map.getContext("2d");
-
-            var fLongtitude = parseFloat(lng.valueOf());
-            var normLon = ((fLongtitude + 180.0) * (window.innerWidth / 360.0));
-
-            var fLantitude = parseFloat(lat.valueOf());
-            var normLat = ((fLantitude + 90.0) * (window.innerHeight / 180.0));
-
-            if (lastX == null || lastY == null) {
-                drawArcOnCanvas(normLon, normLat, 5, "#f00000");
-            } else {
-
-                console.log("Drawing line from ("
-                    + (Math.round(lastX * 10) / 10).toString()
-                    + ","
-                    + (Math.round(lastY * 10) / 10).toString()
-                    + ") to ("
-                    + (Math.round(normLon * 10) / 10).toString()
-                    + ", "
-                    + (Math.round(normLat * 10) / 10).toString()
-                    + ")");
-                context.lineWidth = "10";
-                context.strokeStyle = "red";
-                context.beginPath();
-                context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
-                context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
-                context.stroke();
-            }
-            lastX = normLon;
-            lastY = normLat;
-
-            $("#lng").text(lng);
-            $("#lat").text(lat);
-        });
-    });
-    if (IntervalTime != 0) {
-        setInterval(drawLine, IntervalTime);
-        drawLine();
-    } else {
-        drawPoint = (function () {
+    if (fileContent == 0) {
+        if (connected == 0) {
+            alert("Not Connected to simulator!");
+            throw new Error("Not Connected to simulator!");
+        }
+        
+        drawLine = (function () {
             $.post( "@Url.Action("GetCord")").done(function (xml) {
-                var xmlDoc = $.parseXML(xml),
-                $xml = $(xmlDoc),
+                var xmlDoc = $.parseXML( xml ),
+                $xml = $( xmlDoc ),
                 lat = $xml.find("lat").text();
                 lng = $xml.find("lng").text();
 
                 var map = document.getElementById("map");
+                var context = map.getContext("2d");
 
-                var fLon = parseFloat(lng.valueOf());
-                //var aaa = ((aa + 180.0) / 360.0) * (c.scrollWidth);
-                var normLon = ((fLon + 170.0) * (map.width / 360.0));
+                var fLongtitude = parseFloat(lng.valueOf());
+                var normLon = ((fLongtitude + 180.0) * (window.innerWidth / 360.0));
 
-                var fLat = parseFloat(lat.valueOf());
-                //var bbb = ((bb + 90.0) / 180.0) * (c.scrollHeight);
-                var normLat = ((fLat + 50.0) * (map.height / 180.0)) ;
+                var fLantitude = parseFloat(lat.valueOf());
+                var normLat = ((fLantitude + 90.0) * (window.innerHeight / 180.0));
 
-                console.log("lng: " + fLon + " -> " + (Math.round(normLon)).toString());
-                console.log("lat: " + fLat + " -> " + (Math.round(normLat)).toString());
+                if (lastX == null || lastY == null) {
+                    drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+                } else {
 
-                drawArcOnCanvas(normLon, normLat, 10, "#09298f");
-                drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+                    console.log("Drawing line from ("
+                        + (Math.round(lastX * 10) / 10).toString()
+                        + ","
+                        + (Math.round(lastY * 10) / 10).toString()
+                        + ") to ("
+                        + (Math.round(normLon * 10) / 10).toString()
+                        + ", "
+                        + (Math.round(normLat * 10) / 10).toString()
+                        + ")");
+                    context.lineWidth = "10";
+                    context.strokeStyle = "red";
+                    context.beginPath();
+                    context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
+                    context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
+                    context.stroke();
+                }
+                lastX = normLon;
+                lastY = normLat;
 
                 $("#lng").text(lng);
                 $("#lat").text(lat);
             });
         });
-        drawPoint();
+        if (IntervalTime != 0) {
+            setInterval(drawLine, IntervalTime);
+            drawLine();
+        } else {
+            drawPoint = (function () {
+                $.post( "@Url.Action("GetCord")").done(function (xml) {
+                    var xmlDoc = $.parseXML(xml),
+                    $xml = $(xmlDoc),
+                    lat = $xml.find("lat").text();
+                    lng = $xml.find("lng").text();
+
+                    var map = document.getElementById("map");
+
+                    var fLon = parseFloat(lng.valueOf());
+                    //var aaa = ((aa + 180.0) / 360.0) * (c.scrollWidth);
+                    var normLon = ((fLon + 170.0) * (map.width / 360.0));
+
+                    var fLat = parseFloat(lat.valueOf());
+                    //var bbb = ((bb + 90.0) / 180.0) * (c.scrollHeight);
+                    var normLat = ((fLat + 50.0) * (map.height / 180.0)) ;
+
+                    console.log("lng: " + fLon + " -> " + (Math.round(normLon)).toString());
+                    console.log("lat: " + fLat + " -> " + (Math.round(normLat)).toString());
+
+                    drawArcOnCanvas(normLon, normLat, 10, "#09298f");
+                    drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+
+                    $("#lng").text(lng);
+                    $("#lat").text(lat);
+                });
+            });
+            drawPoint();
+        }
     }
 
+    //read from file
     @if (ViewBag.data != null && ViewBag != null)
     {
         <text>
+        if (fromFileContent == 0) {
+            alert("Error in file content");
+            throw new Error("Error in file content");
+        }
+
         var fileContent = Array();
 
         @for(int i = 0; i < ViewBag.data.Count; i++){
@@ -154,11 +190,10 @@
             latitude = parseFloat(latitude);
 
             var normLon = ((longtitude + 180.0) * (window.innerWidth / 360.0));
-            console.log(normLon);
-            console.log(window.innerWidth);
+            console.log(longtitude);
+            console.log(latitude);
             var normLat = ((latitude + 90.0) * (window.innerHeight / 180.0));
-            console.log(normLat);
-            console.log(window.innerHeight);
+            
             if (lastX == null || lastY == null) {
                 drawArcOnCanvas(normLon, normLat, 5, "#f00000");
             } else {
@@ -192,9 +227,9 @@
             latitude = parseFloat(latitude);
 
             var normLon = ((longtitude + 170.0) * (map.width / 360.0));
-
+            console.log(longtitude);
             var normLat = ((latitude + 50.0) * (map.height / 180.0));
-
+            console.log(latitude);
             console.log("lng: " + longtitude + " -> " + (Math.round(normLon)).toString());
             console.log("lat: " + latitude + " -> " + (Math.round(normLat)).toString());
 
@@ -215,6 +250,7 @@
             if (i == fileContent.length / 5) {
                 clearInterval(interval);
                 drawPointFromFile(longtitude, latitude);
+                alert("Animation is over");
             } else {
                 drawLineFromFile(longtitude, latitude);
                 i++;
@@ -222,33 +258,7 @@
         });
 
         interval = setInterval(drawAll, IntervalTime);
-        alert("Animation is over");
     </text>
     }
-    
-</script>
 
-<script>
-    window.onload = function () {
-        var map = document.getElementById("map");
-        map.width = window.innerWidth;
-        map.height = window.innerHeight;
-        var context = map.getContext("2d");
-        context.translate(0, 0);
-        var img = document.getElementById("map_pic");
-
-        context.drawImage(img, 0, 0, img.width, img.height, 0, 0, map.width, map.height);
-    };
-</script>
-
-<script>
-    drawArcOnCanvas = (function (x, y, r, color) {
-        var map = document.getElementById("map");
-        var context = map.getContext("2d");
-        console.log("Trying to draw on: " + x.toString() + "," + y.toString() + " of: " + map.clientWidth.toString() + "," + map.clientHeight.toString());
-        context.fillStyle = color;
-        context.beginPath();
-        context.arc((Math.round(x * 10) / 10), (Math.round(y * 10) / 10), r, 0, 2 * Math.PI);
-        context.fill();
-    });
 </script>
