--- a/FlightTracker/Views/Home/Save.cshtml
+++ b/FlightTracker/Views/Home/Save.cshtml
@@ -75,8 +75,9 @@
 
             var fLongtitude = parseFloat(lng.valueOf());
             var normLon = ((fLongtitude + 180.0) * (window.innerWidth / 360.0));
-
             var fLantitude = parseFloat(lat.valueOf());
+            console.log(fLongtitude);
+            console.log(fLantitude);
             var normLat = ((fLantitude + 90.0) * (window.innerHeight / 180.0));
 
             if (lastX == null || lastY == null) {
@@ -113,6 +114,54 @@
     } else if (IntervalTime == 0) {
         alert("Didn't get interval!");
         throw new Error("Didn't get interval!");
+    } else if (counter >= times) {
+        drawLineEnd = (function () {
+        $.post( "@Url.Action("GetCord")").done(function (xml) {
+            var xmlDoc = $.parseXML( xml ),
+            $xml = $( xmlDoc ),
+            lat = $xml.find("lat").text();
+            lng = $xml.find("lng").text();
+
+            var map = document.getElementById("map");
+            var context = map.getContext("2d");
+
+            var fLongtitude = parseFloat(lng.valueOf());
+            var normLon = ((fLongtitude + 180.0) * (window.innerWidth / 360.0));
+
+            var fLantitude = parseFloat(lat.valueOf());
+            var normLat = ((fLantitude + 90.0) * (window.innerHeight / 180.0));
+
+            if (lastX == null || lastY == null) {
+                drawArcOnCanvas(normLon, normLat, 5, "#f00000");
+            } else {
+
+                console.log("Drawing line from ("
+                    + (Math.round(lastX * 10) / 10).toString()
+                    + ","
+                    + (Math.round(lastY * 10) / 10).toString()
+                    + ") to ("
+                    + (Math.round(normLon * 10) / 10).toString()
+                    + ", "
+                    + (Math.round(normLat * 10) / 10).toString()
+                    + ")");
+                context.lineWidth = "10";
+                context.strokeStyle = "red";
+                context.beginPath();
+                context.moveTo((Math.round(lastX * 10) / 10), (Math.round(lastY * 10) / 10));
+                context.lineTo((Math.round(normLon * 10) / 10), (Math.round(normLat * 10) / 10));
+                context.stroke();
+            }
+            lastX = normLon;
+            lastY = normLat;
+
+            $("#lng").text(lng);
+            $("#lat").text(lat);
+            counter++;
+            });
+            
+        });
+        drawLineEnd();
+        alert("Finished");
     }
     
 </script>
