fixed very big bug

--- a/FlightTracker/Views/Home/Display.cshtml
+++ b/FlightTracker/Views/Home/Display.cshtml
@@ -79,7 +79,7 @@
     var lastX = null;
     var lastY = null;
 
-    if (fileContent == 0) {
+    if (fromFileContent == 0) {
         if (connected == 0) {
             alert("Not Connected to simulator!");
             throw new Error("Not Connected to simulator!");
