--- a/FlightTracker/Views/Home/Save.cshtml
+++ b/FlightTracker/Views/Home/Save.cshtml
@@ -50,6 +50,7 @@
     var IntervalTime = @Session["time"] * 1000;
     var PeriodTime = @Session["Period"] * 1000;
     var connected = @Session["connected"];
+    var finished = 0;
 
     if (connected == 0) {
         alert("Not Connected to simulator!");
@@ -64,7 +65,10 @@
     var counter = 0;
 
     drawLine = (function () {
-        $.post( "@Url.Action("SaveData", new { filename = Session["filename"] })").done(function (xml) {
+
+        if (counter < times) {
+
+            $.post( "@Url.Action("SaveData", new { filename = Session["filename"] })").done(function (xml) {
             var xmlDoc = $.parseXML( xml ),
             $xml = $( xmlDoc ),
             lat = $xml.find("lat").text();
@@ -75,24 +79,15 @@
 
             var fLongtitude = parseFloat(lng.valueOf());
             var normLon = ((fLongtitude + 180.0) * (window.innerWidth / 360.0));
+
             var fLantitude = parseFloat(lat.valueOf());
-            console.log(fLongtitude);
-            console.log(fLantitude);
             var normLat = ((fLantitude + 90.0) * (window.innerHeight / 180.0));
 
-            if (lastX == null || lastY == null) {
+                if (lastX == null || lastY == null) {
+                drawArcOnCanvas(normLon, normLat, 10, "#09298f");
                 drawArcOnCanvas(normLon, normLat, 5, "#f00000");
             } else {
 
-                console.log("Drawing line from ("
-                    + (Math.round(lastX * 10) / 10).toString()
-                    + ","
-                    + (Math.round(lastY * 10) / 10).toString()
-                    + ") to ("
-                    + (Math.round(normLon * 10) / 10).toString()
-                    + ", "
-                    + (Math.round(normLat * 10) / 10).toString()
-                    + ")");
                 context.lineWidth = "10";
                 context.strokeStyle = "red";
                 context.beginPath();
@@ -107,16 +102,14 @@
             $("#lat").text(lat);
             counter++;
         });
-    });
-    if (IntervalTime != 0 && counter < times) {
-        setInterval(drawLine, IntervalTime);
-        drawLine();
-    } else if (IntervalTime == 0) {
-        alert("Didn't get interval!");
-        throw new Error("Didn't get interval!");
-    } else if (counter >= times) {
-        drawLineEnd = (function () {
-        $.post( "@Url.Action("GetCord")").done(function (xml) {
+        } else {
+
+            if (finished == 0) {
+                alert("Finished writing to file.");
+                finished = 1;
+            }
+
+            $.post( "@Url.Action("GetCord")").done(function (xml) {
             var xmlDoc = $.parseXML( xml ),
             $xml = $( xmlDoc ),
             lat = $xml.find("lat").text();
@@ -135,15 +128,6 @@
                 drawArcOnCanvas(normLon, normLat, 5, "#f00000");
             } else {
 
-                console.log("Drawing line from ("
-                    + (Math.round(lastX * 10) / 10).toString()
-                    + ","
-                    + (Math.round(lastY * 10) / 10).toString()
-                    + ") to ("
-                    + (Math.round(normLon * 10) / 10).toString()
-                    + ", "
-                    + (Math.round(normLat * 10) / 10).toString()
-                    + ")");
                 context.lineWidth = "10";
                 context.strokeStyle = "red";
                 context.beginPath();
@@ -158,12 +142,13 @@
             $("#lat").text(lat);
             counter++;
             });
-            
-        });
-        drawLineEnd();
-        alert("Finished");
-    }
-    
+        }
+    });
+
+    // Start timer.
+    setInterval(drawLine, IntervalTime);
+    drawLine();
+
 </script>
 
 <script>
